# hea_mvp

./: .dockerignore  .env.example  .gitignore  Dockerfile.agent  Dockerfile.bot  Dockerfile.service  README.md  docker-compose.yml  patch_patient_orchestration_library.sh  pyproject.toml  requirements.txt  run_compiler_agent.sh  run_definition_agent.sh  run_evaluation_agent.sh  run_patient_controller.sh  run_report_agent.sh  run_runtime_agent.sh  run_specialist_bot.sh  run_user_bot.sh
agents/compiler_agent/: app.py
agents/definition_agent/: app.py
agents/patient_controller/: app.py
agents/report_agent/: app.py
agents/runtime_agent/: app.py
config/: scaffold_strategies.json  specialist_bot_policy.json  specialist_controller_policy.json
data/: graph_registry.json  patient_sessions.json
docs/: API.md  ARCHITECTURE.md  DATA_MODEL.md  MLOPS_ROADMAP.md  MODEL_ROLES.md  PATIENT_ORCHESTRATION_ARCHITECTURE.md  PRODUCTION_ARCHITECTURE_V1.md  README.md  SCENARIOS.md  SERVICES.md  SUBMISSION_PLAN.md  SUBMISSION_RESPONSE.md  compiler-service.md  definition-service.md  evaluation-service.md  ideas.md  publish-handoff.md  report-service.md  runtime-service.md  specialist-controller.md
scripts/: scaffold_v5_smoke_check.py  seed_demo_graph.py  smoke_check.py  specialist_smoke_check.py
shared/: config.py  http_client.py  patient_graph_runtime.py  patient_session_store.py  published_graph_store.py  schemas.py  together_client.py
tests/: test_config.py  test_patient_flow.py  test_runtime.py  test_scaffold_registry.py  test_specialist_flow.py  test_user_bot.py
(+71 files in other folders)
