[project]
name = "hea-mvp-v2"
version = "0.1.0"
description = "Hea MVP v2 agentic architecture scaffold"
requires-python = ">=3.11"
dependencies = [
  "aiogram>=3.26,<4.0",
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.35,<1.0",
  "pydantic>=2.12,<3.0",
  "pydantic-settings>=2.11,<3.0",
  "httpx>=0.28,<1.0",
  "together>=1.5,<2.0",
  "python-dotenv>=1.0,<2.0",
]

[tool.uv]
package = false
